--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "express": "^4.16.4",
-    "express-handlebars": "^3.0.2"
+    "express-handlebars": "^3.0.2",
+    "express-ip": "^1.0.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.10"
